# playground

./: .gitmodules  AGENTS.md  DESIGN.md  OPTIMIZATION_README_0120.md  README.md  ai_worker_local_memory.json  ai_worker_memory.db  pyproject.toml  requirements.txt  run_opencode.py  stress_test_llm.py  test_pptx_comparison.py  技术方案  系统架构  问题背景
ai_worker/: .env.example  __init__.py  main.py  mcp_client.py  mcp_server.py  mcp_servers.json  pyproject.toml  pyproject_312_backup.toml  raw_conv.txt  requirements.txt  test_llm.py  test_workers.py
ai_worker/adapters/: __init__.py  base.py  discord_adapter.py
ai_worker/config/: __init__.py  curated_sources.py  settings.py
ai_worker/core/: __init__.py  message.py
ai_worker/docs/: LOCAL_SKILLS_DESIGN.md  MCP_LEARNING_GUIDE.md  MEMORY_ARCHITECTURE.md  MEMORY_SYSTEM_DEMO.md  MEMU_ANALYSIS.md  MEMU_EVALUATION_ANALYSIS.md  PROGRESS.md  PROGRESS_REPORT.md  USER_MANUAL.md
ai_worker/eval/: __init__.py  agent.py  generate_comparison.py  judge.py  metrics.py  run_benchmark.sh  runner.py
ai_worker/llm/: __init__.py  base.py  openai_client.py
ai_worker/memory/: __init__.py  base.py  conversation.py  factory.py  persistent.py
ai_worker/plan/: MILESTONE_20260126.md  PROJECT_PLAN.md
ai_worker/reports/: daily_brief_2026-01-27.md  daily_brief_20260128_152658.md  daily_brief_20260128_163812.md  daily_brief_20260129_002848.md  daily_brief_20260129_005304.md  daily_brief_20260129_130305.md  daily_brief_20260129_131030.md  daily_brief_20260129_190740.md  daily_brief_20260130_092601.md  daily_brief_20260130_093040.md  daily_brief_20260131_090034.md  daily_brief_20260131_092032.md  daily_brief_20260201_185232.md  daily_brief_20260202_093125.md  daily_brief_20260202_125956.md  daily_brief_20260203_091318.md  daily_brief_20260203_093048.md  daily_brief_20260203_094702.md  daily_brief_20260203_094858.md  daily_brief_20260203_095358.md  daily_brief_20260203_194431.md  daily_brief_20260204_092056.md  final_test.md  (+1 more)
(+161 files in other folders)
