[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "feedparser>=6.0.12",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openai>=2.16.0",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pypdf>=6.6.2",
    "pytdx>=1.72",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "yfinance>=1.0",
]
