[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai_worker"
version = "0.1.0"
description = "Multi-Agent AI Employee System"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "discord.py>=2.3.0",
    "lark-oapi>=1.0.0",
    "openai>=1.0.0",
    "apscheduler>=3.11.2",
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "pypdf>=3.0.0",
    "memu-py>=1.2.0",
    "duckduckgo-search>=6.0.0",
    "feedparser>=6.0.0",
    "playwright>=1.40.0",
    "pytdx>=1.72",
    "mcp>=0.1.0",
    "PyGithub>=2.1.1",
]

[project.optional-dependencies]
dev = [
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
ai-worker = "ai_worker.main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
